@@ -1,6 +1,9 @@
 API ChangeLog	(see the ChangeLog in each 'apps' directory for
 		app specific changes
 
+02-Dec-2000	Troy A. Griffitts <scribe@crosswire.org>
+	Added write support for RawLD
+	Added new utility modwrite to call a write interface
 
 30-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
 	Fixed memory leak in write methods of RawText
